# python_package_tutorial

./: LICENSE  pyproject.toml
src/palindrome_actionjdjackson/: phrase.py
tests/: test_phrase.py
