[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_actionjdjackson"
version = "0.0.1"
authors = [
  { name="Jacob Jackson", email="jacobjackson1985@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/actionjdjackson/palindrome"
"Bug Tracker" = "https://github.com/actionjdjackson/palindrome/issues"
